# gitfu

./: .gitmodules  CMakeLists.txt  build.sh
data/: rule.conf
util/: CMakeLists.txt
util/stuff1/: #CMakeLists.txt#  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt~  Makefile  Makefile~  TurorialConfig.h  TutorialConfig.h  TutorialConfig.h.in  cmake_install.cmake  stuff.cc  stuff.cc~  stuff1
util/stuff1/MathFunctions/: Makefile  cmake_install.cmake
util/stuff2/: CMakeLists.txt  Makefile  cmake_install.cmake  getis2.cc
